k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conex-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conex-app
  template:
    metadata:
      labels:
        app: conex-app
    spec:
      serviceAccountName: conex-app
      containers:
      - name: conex-app
        image: 260475105314.dkr.ecr.ap-northeast-1.amazonaws.com/tttol/conex:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
